tests/fixtures/errors/no_val_dir.s
.name "No val after direct"
.comment "no val after direct"

	sti r1, %, %1
